--- a/JavaScript/1821-manipulando-dom-con-js-proyecto_inicial/index.html
+++ b/JavaScript/1821-manipulando-dom-con-js-proyecto_inicial/index.html
@@ -30,12 +30,19 @@
               class="inputForm"
               autocomplete="off"
             />
-            <button type="submit" class="btnCreate">
+            <button type="submit" class="btnCreate" data-form-btn> 
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
         </div>
         <ul class="cardsList">
+          <li class="card">
+            <div>
+              <i class="far fa-check-square icon"></i>
+              <span class="task">Hacer curso de DOM</span>
+            </div>
+            <i class="fas fa-trash-alt trashIcon icon"></i>
+          </li>
           <li class="card">
             <div>
               <i class="far fa-check-square icon"></i>
